clean up deprecations, warnings