@@ -42,7 +42,7 @@ public class LabelEntity implements CalendarEntity {
 	 */
 	@Override
 	public Integer getDuration() {
-		return new Integer(0);
+		return Integer.valueOf(0);
 	}
 	
 	/* (non-Javadoc)
