@@ -237,7 +237,7 @@ public class UndoTest {
 		Collection<Task> coll = TaskModel.getReference().getTasks();
 		assertTrue( "Task DB should contain 1 task", coll.size() == 1);
 		
-		Integer taskid = new Integer(coll.iterator().next().getKey());
+		Integer taskid = Integer.valueOf(coll.iterator().next().getKey());
 		Subtask st1 = new Subtask();
 		st1.setDescription("st1");
 		st1.setStartDate(new Date());
